--- a/main.css
+++ b/main.css
@@ -3,11 +3,13 @@
   /* font-family: "Montserrat", sans-serif; */
   font-family: "Poppins", sans-serif;
   padding: 0px;
-  background-color: black;
+  /* background-color: black; */
+}
+body{
+    background-color: black;
 }
 .Top {
   margin-left: 20px;
-
 }
 .Top > p {
   margin-block: 20px;
@@ -51,35 +53,123 @@
   /* border: 4px solid green;   */
   color: #b8bccc80;
 }
- .outer-div > div> p span {
-    color:#edf3f2d7;
-    font-size: 19px;
- }
-.middle{
-    width: 890px;
-    height: 345px;
-   background-color: #575A85;
-   margin:auto;
-   padding-left:10%;
-   padding-top:4%;
-   box-sizing: border-box;
-   margin-bottom: 9px;
+.outer-div > div > p span {
+  color: #edf3f2d7;
+  font-size: 19px;
+  font-weight: 500;
+  font-style: italic;
+}
+.middle {
+  width: 890px;
+  height: 345px;
+  background-color: #575a85;
+  margin: auto;
+  padding-left: 10%;
+  padding-top: 4%;
+  box-sizing: border-box;
+  margin-bottom: 9px;
 }
 
-.Time-zone{
-    width: 890px;
-    height: 245px;
-    /* background-color: #e4e5f7; */
+.Time-zone {
+  width: 890px;
+  height: 245px;
+  /* background-color: #e4e5f7; */
+  margin: auto;
+  border-radius: 10px;
+}
+
+.Time-zone > p {
+  color: #b8bccc80;
+  font-weight: 700;
+  font-size: 20px;
+  padding: 15px;
+}
+.Time-zone > p span {
+  color: #edf3f2d7;
+  font-weight: 500;
+  font-style: italic;
+}
+.search {
     margin: auto;
-    border-radius: 10px;
+    width: 900px;
+    height: 100px;
+    /* background-color: aqua; */
+    display: flex; /* Add display: flex; to make the children centered */
+    flex-direction: column;
+    align-items: center; /* Center children vertically */
+    box-sizing: border-box;
 }
 
-.Time-zone> p{
-    color:#B8BCCC80;
-    font-weight:600;
-    font-size: 20px;
-    padding: 15px;
+.search #text {
+    margin-top: 9px;
+    border-radius: 10px;
+    padding-inline: 190px;
+    padding-block:15px;
+    border: 3px solid #575A85;
+    background-color: transparent;
+    /* Remove display, align-items, and justify-content properties */
 }
-.Time-zone> p span{
-    color:#edf3f2d7;
+#text::placeholder{
+    text-align: left;
+    font-size: 20px;
+}
+
+/* .postoffice {
+    display: flex; 
+    align-items: center;
+  
+    flex-direction: column;
+    width: 90vw;
+    margin-block: 5px;
+    margin-inline: 5px;
+    flex-wrap: wrap;
+} */
+/* 
+.divPost {
+    min-width: 500px;
+    height: 199px;
+background-color: #575a85;
+    border-radius: 10px;
+    display: flex;
+    margin-inline: 5px;
+    flex-direction: column;
+    justify-content: center;
+    margin-block: 5px;
+} */
+
+/* .divPost > p {
+    color: #b8bccc;
+    margin: 5px;
+    font-size: 19px;
+} */
+
+.postoffice {
+    display: flex; 
+    align-items: center;
+    justify-content: space-around; /* Adjust as needed */
+    margin: auto;
+    flex-wrap: wrap; /* Allow flex items to wrap to the next line */
+    width: 90vw;
+}
+
+.divPost {
+    flex: 0 0 calc(50% - 10px); /* Set flex basis to 50%, considering margin */
+    height: 199px;
+    background-color: #575a85;
+    border-radius: 10px;
+    display: flex;
+    margin: 5px; /* Adjust as needed */
+    flex-direction: column;
+    justify-content: center;
+}
+
+.divPost > p {
+  font-size: 19px;
+    color: #f6f7fb;
+    margin: 5px;
+    font-weight: 700;
+}
+.divPost > p span{
+    font-weight: 500;
+    font-style: italic;
 }
